@@ -1,7 +1,7 @@
 /* jquery css THEME adjustments */
 
 /* Tabs --------------------------------*/
-.ui-widget-content 						 { color:white; background:#999999; border-color:#bbbbbb;  }
+.ui-widget-content 						 { color:white; background:#002540; border-color:#bbbbbb;  }
 .ui-widget-content a 					 { color:#bbbbff; }
 .ui-widget-content a:hover 				 { color:orange; }
 
